--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230623221858">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230623223315">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +50,7 @@
 						</div>
 					</div>
 					<div class="main__image">
-						<img src="img/main/01.jpg" alt="image">
+						<picture><source srcset="img/main/01.webp" type="image/webp"><img src="img/main/01.jpg" alt="image"></picture>
 					</div>
 				</div>
 			</section>
@@ -58,7 +58,7 @@
 				<div class="speed__container">
 					<div class="speed__items">
 						<div style="--anim: 0s" class="speed__item item-speed">
-							<div class="item-speed__image"><img src="img/speed/01.png" alt="image"></div>
+							<div class="item-speed__image"><picture><source srcset="img/speed/01.webp" type="image/webp"><img src="img/speed/01.png" alt="image"></picture></div>
 							<div class="item-speed__content">
 								<h3 class="item-speed__title">Speed</h3>
 								<div class="item-speed__text">
@@ -68,7 +68,7 @@
 
 						</div>
 						<div style="--anim: 0.2s" class="speed__item item-speed">
-							<div class="item-speed__image"><img src="img/speed/02.png" alt="image"></div>
+							<div class="item-speed__image"><picture><source srcset="img/speed/02.webp" type="image/webp"><img src="img/speed/02.png" alt="image"></picture></div>
 							<div class="item-speed__content">
 								<h3 class="item-speed__title">Design</h3>
 								<div class="item-speed__text">
@@ -78,7 +78,7 @@
 
 						</div>
 						<div style="--anim: 0.4s" class="speed__item item-speed">
-							<div class="item-speed__image"><img src="img/speed/03.png" alt="image"></div>
+							<div class="item-speed__image"><picture><source srcset="img/speed/03.webp" type="image/webp"><img src="img/speed/03.png" alt="image"></picture></div>
 							<div class="item-speed__content">
 								<h3 class="item-speed__title">Modularity</h3>
 								<div class="item-speed__text">
@@ -92,31 +92,34 @@
 			</section>
 			<div class="druk">
 				<div class="druk__container">
-					<div class="druk__slider swiper">
-						<div class="druk__wrapper swiper-wrapper">
-							<div class="druk__slide swiper-slide">
-								<div class="slide-druk__item">
-									<div class="slide-druk__image"><img src="img/druk/druk.svg" alt="image-svg"></div>
-									<div class="slide-druk__text">
-										<p>“Join a community of industry leading professionals. Join a community of industry leading professionals.“</p>
+					<div class="druk__inner">
+						<div class="druk__slider swiper">
+							<div class="druk__wrapper swiper-wrapper">
+								<div class="druk__slide swiper-slide">
+									<div class="slide-druk__item">
+										<div class="slide-druk__image"><img src="img/druk/druk.svg" alt="image-svg"></div>
+										<div class="slide-druk__text">
+											<p>“Join a community of industry leading professionals. Join a community of industry leading professionals.“</p>
+										</div>
+										<div class="slide-druk__name">Laura Paula</div>
+										<div class="slide-druk__post">Director @Company</div>
 									</div>
-									<div class="slide-druk__name">Laura Paula</div>
-									<div class="slide-druk__post">Director @Company</div>
+								</div>
+								<div class="druk__slide swiper-slide">
+									<div class="slide-druk__item">
+										<div class="slide-druk__image"><img src="img/druk/druk.svg" alt="image-svg"></div>
+										<div class="slide-druk__text">
+											<p>“Join a community of industry leading professionals. Join a community of industry leading professionals.“</p>
+										</div>
+										<div class="slide-druk__name">Laura Paula</div>
+										<div class="slide-druk__post">Director @Company</div>
+									</div>
 								</div>
 							</div>
-							<div class="druk__slide swiper-slide">
-								<div class="slide-druk__item">
-									<div class="slide-druk__image"><img src="img/druk/druk.svg" alt="image-svg"></div>
-									<div class="slide-druk__text">
-										<p>“Join a community of industry leading professionals. Join a community of industry leading professionals.“</p>
-									</div>
-									<div class="slide-druk__name">Laura Paula</div>
-									<div class="slide-druk__post">Director @Company</div>
-								</div>
-							</div>
+							<div class="druk__bullets"></div>
 						</div>
-						<div class="druk__bullets"></div>
 					</div>
+
 				</div>
 			</div>
 			<section class="landing">
@@ -124,26 +127,26 @@
 					<h2 class="landing__title">Landing pages</h2>
 					<div class="landing__items">
 						<article class="landing__item item-landing">
-							<div class="item-landing__image"><img src="img/landing/01.jpg" alt="image"></div>
+							<div class="item-landing__image"><picture><source srcset="img/landing/01.webp" type="image/webp"><img src="img/landing/01.jpg" alt="image"></picture></div>
 							<div class="item-landing__content">
 								<h3 class="item-landing__title"><a href="#">Landing one</a></h3>
 							</div>
 
 						</article>
 						<article class="landing__item item-landing">
-							<div class="item-landing__image"><img src="img/landing/02.jpg" alt="image"></div>
+							<div class="item-landing__image"><picture><source srcset="img/landing/02.webp" type="image/webp"><img src="img/landing/02.jpg" alt="image"></picture></div>
 							<div class="item-landing__content">
 								<h3 class="item-landing__title"><a href="#">Landing one</a></h3>
 							</div>
 						</article>
 						<article class="landing__item item-landing">
-							<div class="item-landing__image"><img src="img/landing/03.jpg" alt="image"></div>
+							<div class="item-landing__image"><picture><source srcset="img/landing/03.webp" type="image/webp"><img src="img/landing/03.jpg" alt="image"></picture></div>
 							<div class="item-landing__content">
 								<h3 class="item-landing__title"><a href="#">Landing one</a></h3>
 							</div>
 						</article>
 						<article class="landing__item item-landing">
-							<div class="item-landing__image"><img src="img/landing/04.jpg" alt="image"></div>
+							<div class="item-landing__image"><picture><source srcset="img/landing/04.webp" type="image/webp"><img src="img/landing/04.jpg" alt="image"></picture></div>
 							<div class="item-landing__content">
 								<h3 class="item-landing__title"><a href="#">Landing one</a></h3>
 							</div>
@@ -177,7 +180,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230623221858"></script>
+	<script src="js/app.min.js?_v=20230623223315"></script>
 </body>
 
 </html>
